// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Menu Button should render correctly 1`] = `
.emotion-0 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-0:hover,
.emotion-0:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-0 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-0 svg {
  vertical-align: middle;
}

.emotion-2 {
  color: #fff;
  fill: currentColor;
}

.emotion-6 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <amp-state
    id="menuState"
  >
    <script
      type="application/json"
    >
      {"expanded":false}
    </script>
  </amp-state>
  <button
    aria-expanded="false"
    class="emotion-0 emotion-1"
    data-amp-bind-aria-expanded="menuState.expanded ? \\"true\\" : \\"false\\""
    dir="ltr"
    on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),other-element.toggleVisibility"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="emotion-2 emotion-3"
      data-amp-bind-hidden="menuState.expanded"
      focusable="false"
      height="2.75rem"
      viewBox="0 0 44 44"
      width="2.75rem"
    >
      <path
        d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="emotion-2 emotion-3"
      data-amp-bind-hidden="!menuState.expanded"
      focusable="false"
      height="2.75rem"
      hidden=""
      viewBox="0 0 44 44"
      width="2.75rem"
    >
      <path
        d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="emotion-6 emotion-7"
    >
      Menu
    </span>
  </button>
</div>
`;

exports[`AMP Menu Button should render rtl correctly 1`] = `
.emotion-0 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: right;
  height: 3rem;
  width: 3rem;
}

.emotion-0:hover,
.emotion-0:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-0 {
    height: 3rem;
    width: 3rem;
  }
}

.emotion-0 svg {
  vertical-align: middle;
}

.emotion-2 {
  color: #fff;
  fill: currentColor;
}

.emotion-6 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <amp-state
    id="menuState"
  >
    <script
      type="application/json"
    >
      {"expanded":false}
    </script>
  </amp-state>
  <button
    aria-expanded="false"
    class="emotion-0 emotion-1"
    data-amp-bind-aria-expanded="menuState.expanded ? \\"true\\" : \\"false\\""
    dir="rtl"
    on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),other-element.toggleVisibility"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="emotion-2 emotion-3"
      data-amp-bind-hidden="menuState.expanded"
      focusable="false"
      height="2.75rem"
      viewBox="0 0 44 44"
      width="2.75rem"
    >
      <path
        d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="emotion-2 emotion-3"
      data-amp-bind-hidden="!menuState.expanded"
      focusable="false"
      height="2.75rem"
      hidden=""
      viewBox="0 0 44 44"
      width="2.75rem"
    >
      <path
        d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="emotion-6 emotion-7"
    >
      Menu
    </span>
  </button>
</div>
`;

exports[`Canonical Closed menu button should render correctly 1`] = `
.emotion-0 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-0:hover,
.emotion-0:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-0 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-0 svg {
  vertical-align: middle;
}

.emotion-2 {
  color: #fff;
  fill: currentColor;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <button
    aria-expanded="false"
    class="emotion-0 emotion-1"
    dir="ltr"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="emotion-2 emotion-3"
      focusable="false"
      height="2.75rem"
      viewBox="0 0 44 44"
      width="2.75rem"
    >
      <path
        d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
      />
    </svg>
    <span
      class="emotion-4 emotion-5"
    >
      Menu
    </span>
  </button>
</div>
`;

exports[`Canonical Closed menu button should render rtl correctly 1`] = `
.emotion-0 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: right;
  height: 3rem;
  width: 3rem;
}

.emotion-0:hover,
.emotion-0:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-0 {
    height: 3rem;
    width: 3rem;
  }
}

.emotion-0 svg {
  vertical-align: middle;
}

.emotion-2 {
  color: #fff;
  fill: currentColor;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <button
    aria-expanded="false"
    class="emotion-0 emotion-1"
    dir="rtl"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="emotion-2 emotion-3"
      focusable="false"
      height="2.75rem"
      viewBox="0 0 44 44"
      width="2.75rem"
    >
      <path
        d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
      />
    </svg>
    <span
      class="emotion-4 emotion-5"
    >
      Menu
    </span>
  </button>
</div>
`;

exports[`Canonical Open menu button should render correctly 1`] = `
.emotion-0 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.emotion-0:hover,
.emotion-0:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-0 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-0 svg {
  vertical-align: middle;
}

.emotion-2 {
  color: #fff;
  fill: currentColor;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <button
    aria-expanded="true"
    class="emotion-0 emotion-1"
    dir="ltr"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="emotion-2 emotion-3"
      focusable="false"
      height="2.75rem"
      viewBox="0 0 44 44"
      width="2.75rem"
    >
      <path
        d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="emotion-4 emotion-5"
    >
      Menu
    </span>
  </button>
</div>
`;

exports[`Canonical Open menu button should render rtl correctly 1`] = `
.emotion-0 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: right;
  height: 3rem;
  width: 3rem;
}

.emotion-0:hover,
.emotion-0:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-0 {
    height: 3rem;
    width: 3rem;
  }
}

.emotion-0 svg {
  vertical-align: middle;
}

.emotion-2 {
  color: #fff;
  fill: currentColor;
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <button
    aria-expanded="true"
    class="emotion-0 emotion-1"
    dir="rtl"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="emotion-2 emotion-3"
      focusable="false"
      height="2.75rem"
      viewBox="0 0 44 44"
      width="2.75rem"
    >
      <path
        d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="emotion-4 emotion-5"
    >
      Menu
    </span>
  </button>
</div>
`;

exports[`Dropdown navigation should render correctly when closed 1`] = `
.emotion-0 {
  background-color: #222222;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-0 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-2 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-4 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-4:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-20 {
  border-left: 0.25rem solid #FFFFFF;
  padding-left: 0.5rem;
}

.emotion-22 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-e2e="dropdown-nav"
    height="0"
  >
    <ul
      class="emotion-2 emotion-3"
      role="list"
    >
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-home"
          class="emotion-6 emotion-7"
          href="/pidgin"
        >
          <span
            id="dropdownNavigation-home"
          >
            Home
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-nigeria"
          class="emotion-6 emotion-7"
          href="/pidgin/topics/3d5d5e30-dd50-4041-96d5-c970b20005b9"
        >
          <span
            id="dropdownNavigation-nigeria"
          >
            Nigeria
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-africa"
          class="emotion-6 emotion-7"
          href="/pidgin/topics/d2c2ba68-f9ad-4185-a6d1-7f6437256735"
        >
          <span
            id="dropdownNavigation-africa"
          >
            Africa
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-world"
          class="emotion-6 emotion-7"
          href="/pidgin/world"
        >
          <span
            class="emotion-20 emotion-21"
            dir="ltr"
            id="dropdownNavigation-world"
            role="text"
          >
            <span
              class="emotion-22 emotion-23"
            >
              Current page, 
            </span>
            World
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-video"
          class="emotion-6 emotion-7"
          href="/pidgin/media/video"
        >
          <span
            id="dropdownNavigation-video"
          >
            Video
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-audio"
          class="emotion-6 emotion-7"
          href="/pidgin/media/audio"
        >
          <span
            id="dropdownNavigation-audio"
          >
            Audio
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-sport"
          class="emotion-6 emotion-7"
          href="/pidgin/sport"
        >
          <span
            id="dropdownNavigation-sport"
          >
            Sport
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-entertainment"
          class="emotion-6 emotion-7"
          href="/pidgin/topics/1c3b60a9-14eb-484b-a750-9f5b1aeaac31"
        >
          <span
            id="dropdownNavigation-entertainment"
          >
            Entertainment
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-most-popular"
          class="emotion-6 emotion-7"
          href="/pidgin/popular/read"
        >
          <span
            id="dropdownNavigation-most-popular"
          >
            Most popular
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Dropdown navigation should render correctly when open 1`] = `
.emotion-0 {
  background-color: #222222;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: visible;
  height: 0px;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-0 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-2 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.emotion-4 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.emotion-4:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-20 {
  border-left: 0.25rem solid #FFFFFF;
  padding-left: 0.5rem;
}

.emotion-22 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-e2e="dropdown-nav"
    height="0"
  >
    <ul
      class="emotion-2 emotion-3"
      role="list"
    >
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-home"
          class="emotion-6 emotion-7"
          href="/pidgin"
        >
          <span
            id="dropdownNavigation-home"
          >
            Home
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-nigeria"
          class="emotion-6 emotion-7"
          href="/pidgin/topics/3d5d5e30-dd50-4041-96d5-c970b20005b9"
        >
          <span
            id="dropdownNavigation-nigeria"
          >
            Nigeria
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-africa"
          class="emotion-6 emotion-7"
          href="/pidgin/topics/d2c2ba68-f9ad-4185-a6d1-7f6437256735"
        >
          <span
            id="dropdownNavigation-africa"
          >
            Africa
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-world"
          class="emotion-6 emotion-7"
          href="/pidgin/world"
        >
          <span
            class="emotion-20 emotion-21"
            dir="ltr"
            id="dropdownNavigation-world"
            role="text"
          >
            <span
              class="emotion-22 emotion-23"
            >
              Current page, 
            </span>
            World
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-video"
          class="emotion-6 emotion-7"
          href="/pidgin/media/video"
        >
          <span
            id="dropdownNavigation-video"
          >
            Video
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-audio"
          class="emotion-6 emotion-7"
          href="/pidgin/media/audio"
        >
          <span
            id="dropdownNavigation-audio"
          >
            Audio
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-sport"
          class="emotion-6 emotion-7"
          href="/pidgin/sport"
        >
          <span
            id="dropdownNavigation-sport"
          >
            Sport
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-entertainment"
          class="emotion-6 emotion-7"
          href="/pidgin/topics/1c3b60a9-14eb-484b-a750-9f5b1aeaac31"
        >
          <span
            id="dropdownNavigation-entertainment"
          >
            Entertainment
          </span>
        </a>
      </li>
      <li
        class="emotion-4 emotion-5"
        role="listitem"
      >
        <a
          aria-labelledby="dropdownNavigation-most-popular"
          class="emotion-6 emotion-7"
          href="/pidgin/popular/read"
        >
          <span
            id="dropdownNavigation-most-popular"
          >
            Most popular
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
